# class-system

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  app.vue  eslint.config.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  proto.cmake  type.ts  uno.config.ts
.github/workflows/: build.yml  ci.yml
components/: TheFooter.vue
configurator/: CMakeLists.txt  common.h  configwindow.cc  configwindow.h  configwindow.ui  main.cc
constants/: constants.h  index.ts
display/: CMakeLists.txt  common.h  config.cc  config.h  constants.h  displaywindow.cc  displaywindow.h  displaywindow.ui  displaywindow_logic.cc  eventnodewidget.cc  eventnodewidget.h  eventnodewidget.ui  extrawindow.cc  extrawindow.h  extrawindow.ui  extrawindow_logic.cc  file.cc  file.h  flowlayout.cc  flowlayout.h  globalstore.cc  globalstore.h  httpclient.cc  httpclient.h  iconwindow.cc  iconwindow.h  iconwindow.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  native.cc  native.h  progresswindow.cc  progresswindow.h  resphandler.cc  resphandler.h  tcpclient.cc  tcpclient.h  titlewidget.cc  (+10 more)
docs/: index.md
docs/display/: index.md
docs/display/extrawindow/: index.md
layouts/: default.vue
manage/components/: ClassOverview.vue  PageFooter.vue  TheFooter.vue  TheHeader.vue  WeekDayArrangements.vue  WeekdayArrangements.vue
manage/components/dialogs/: AddStudentDialog.vue  EditStudentDialog.vue  EditWeekdayArr.vue
manage/layouts/: auth.vue  default.vue  docs.vue
manage/pages/: arrangements.vue  index.vue  lessons.vue  notices_and_events.vue  students.vue
manage/pages/auth/: login.vue
manage/pages/docs/: [...all].vue
manage/plugins/: pinia.client.ts
manage/stores/: class.ts
manage/utils/: arrangements.ts  content.ts  students.ts
prisma/: schema.prisma
proto/: ClassInfo.proto  DailyWeather.proto  DisplayConfig.proto  FailedResponse.proto  Request.proto  Response.proto  Sentence.proto  SuccessfulResponse.proto
resources/: display.qrc  win.rc
resources/styles/: fonts.css  material-light-blue.qss  quasar-variables.css
server/: CMakeLists.txt  constants.h  database.h  logic.cc  logic.h  main.cc  server.cc  server.h  storage.h  tsconfig.json  util.cc  util.h
server/api/: classes.ts  daily_image.ts  login.post.ts
server/api/info/: get.post.ts  put.post.ts
server/api/version/: check_from_github.ts  latest.ts  latest_zip.ts  publish.post.ts
server/plugins/: compression.ts
server/utils/: auth.ts  database.ts  getInfo.ts  githubApi.ts  observeInfo.ts  resp.ts  updateInfo.ts
shared/: constants.h  util.cc  util.h
